crates/oxc_linter/src/snapshots/vitest_no_conditional_expect.snap
---
source: crates/oxc_linter/src/tester.rs
---
  ⚠ eslint-plugin-vitest(no-conditional-expect): Unexpected conditional expect
   ╭─[no_conditional_expect.tsx:3:30]
 2 │             it('foo', () => {
 3 │                 something && expect(something).toHaveBeenCalled();
   ·                              ──────
 4 │             })
   ╰────
  help: Avoid calling `expect` conditionally`

  ⚠ eslint-plugin-vitest(no-conditional-expect): Unexpected conditional expect
   ╭─[no_conditional_expect.tsx:3:28]
 2 │             it('foo', () => {
 3 │                 a || (b && expect(something).toHaveBeenCalled());
   ·                            ──────
 4 │             })
   ╰────
  help: Avoid calling `expect` conditionally`

  ⚠ eslint-plugin-vitest(no-conditional-expect): Unexpected conditional expect
   ╭─[no_conditional_expect.tsx:3:30]
 2 │             it.each``('foo', () => {
 3 │                 something || expect(something).toHaveBeenCalled();
   ·                              ──────
 4 │             });
   ╰────
  help: Avoid calling `expect` conditionally`

  ⚠ eslint-plugin-vitest(no-conditional-expect): Unexpected conditional expect
   ╭─[no_conditional_expect.tsx:3:30]
 2 │             it.each()('foo', () => {
 3 │                 something || expect(something).toHaveBeenCalled();
   ·                              ──────
 4 │             })
   ╰────
  help: Avoid calling `expect` conditionally`

  ⚠ eslint-plugin-vitest(no-conditional-expect): Unexpected conditional expect
   ╭─[no_conditional_expect.tsx:3:30]
 2 │             function getValue() {
 3 │                 something || expect(something).toHaveBeenCalled();
   ·                              ──────
 4 │             }
   ╰────
  help: Avoid calling `expect` conditionally`

  ⚠ eslint-plugin-vitest(no-conditional-expect): Unexpected conditional expect
   ╭─[no_conditional_expect.tsx:3:29]
 2 │             it('foo', () => {
 3 │                 something ? expect(something).toHaveBeenCalled() : noop();
   ·                             ──────
 4 │             })
   ╰────
  help: Avoid calling `expect` conditionally`

  ⚠ eslint-plugin-vitest(no-conditional-expect): Unexpected conditional expect
   ╭─[no_conditional_expect.tsx:3:29]
 2 │             function getValue() {
 3 │                 something ? expect(something).toHaveBeenCalled() : noop();
   ·                             ──────
 4 │             }
   ╰────
  help: Avoid calling `expect` conditionally`

  ⚠ eslint-plugin-vitest(no-conditional-expect): Unexpected conditional expect
   ╭─[no_conditional_expect.tsx:3:38]
 2 │             it('foo', () => {
 3 │                 something ? noop() : expect(something).toHaveBeenCalled();
   ·                                      ──────
 4 │             })
   ╰────
  help: Avoid calling `expect` conditionally`
