crates/oxc_linter/src/snapshots/vitest_no_conditional_in_test.snap
---
source: crates/oxc_linter/src/tester.rs
---
  ⚠ eslint-plugin-vitest(no-conditional-in-test): Avoid having conditionals in tests.
   ╭─[no_conditional_in_test.tsx:2:10]
 1 │ it('foo', function () {
 2 │                   if('bar') {}
   ·                   ────────────
 3 │                  });
   ╰────

  ⚠ eslint-plugin-vitest(no-conditional-in-test): Avoid having conditionals in tests.
   ╭─[no_conditional_in_test.tsx:3:12]
 2 │                   it('bar', () => {
 3 │                     if ('bar') {}
   ·                     ─────────────
 4 │                   })
   ╰────

  ⚠ eslint-plugin-vitest(no-conditional-in-test): Avoid having conditionals in tests.
   ╭─[no_conditional_in_test.tsx:6:12]
 5 │                   it('baz', () => {
 6 │                     if ('qux') {}
   ·                     ─────────────
 7 │                     if ('quux') {}
   ╰────

  ⚠ eslint-plugin-vitest(no-conditional-in-test): Avoid having conditionals in tests.
   ╭─[no_conditional_in_test.tsx:7:12]
 6 │                     if ('qux') {}
 7 │                     if ('quux') {}
   ·                     ──────────────
 8 │                   })
   ╰────

  ⚠ eslint-plugin-vitest(no-conditional-in-test): Avoid having conditionals in tests.
   ╭─[no_conditional_in_test.tsx:2:10]
 1 │     test("shows error", () => {
 2 │ ╭─▶                   if (1 === 2) {
 3 │ │                       expect(true).toBe(false);
 4 │ ╰─▶                   }
 5 │                        });
   ╰────

  ⚠ eslint-plugin-vitest(no-conditional-in-test): Avoid having conditionals in tests.
    ╭─[no_conditional_in_test.tsx:9:10]
  8 │                       setTimeout(() => console.log("noop"));
  9 │ ╭─▶                   if (1 === 2) {
 10 │ │                       expect(true).toBe(false);
 11 │ ╰─▶                   }
 12 │                        });
    ╰────
