crates/oxc_linter/src/snapshots/vitest_no_conditional_tests.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ vitest(no-conditional-tests): Avoid having conditionals in tests
   ╭─[no_conditional_tests.tsx:2:17]
 1 │     describe("shows error", () => {
 2 │ ╭─▶                 if(true) {
 3 │ │                    test("shows error", () => {
 4 │ │                     expect(true).toBe(true);
 5 │ │                    })
 6 │ ╰─▶                 }
 7 │                    })
   ╰────
  help: Remove the surrounding if statement.

  ⚠ vitest(no-conditional-tests): Avoid having conditionals in tests
   ╭─[no_conditional_tests.tsx:3:17]
 2 │                    describe("shows error", () => {
 3 │ ╭─▶                 if(true) {
 4 │ │                    it("shows error", () => {
 5 │ │                     expect(true).toBe(true);
 6 │ │                     })
 7 │ ╰─▶                  }
 8 │                    })
   ╰────
  help: Remove the surrounding if statement.

  ⚠ vitest(no-conditional-tests): Avoid having conditionals in tests
   ╭─[no_conditional_tests.tsx:2:17]
 1 │     describe("errors", () => {
 2 │ ╭─▶                 if (Math.random() > 0) {
 3 │ │                    test("test2", () => {
 4 │ │                    expect(true).toBeTruthy();
 5 │ │                   });
 6 │ ╰─▶                 }
 7 │                    });
   ╰────
  help: Remove the surrounding if statement.
