crates/oxc_linter/src/snapshots/vitest_no_focused_tests.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:10]
 1 │ describe.only()
   ·          ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:10]
 1 │ describe.only.each()()
   ·          ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:10]
 1 │ describe.only.each`table`()
   ·          ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:10]
 1 │ describe["only"]()
   ·          ──────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:4]
 1 │ it.only()
   ·    ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:15]
 1 │ it.concurrent.only.each``()
   ·               ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:4]
 1 │ it.only.each()()
   ·    ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:4]
 1 │ it.only.each`table`()
   ·    ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:4]
 1 │ it["only"]()
   ·    ──────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:6]
 1 │ test.only()
   ·      ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:17]
 1 │ test.concurrent.only.each()()
   ·                 ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:6]
 1 │ test.only.each()()
   ·      ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:6]
 1 │ test.only.each`table`()
   ·      ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:6]
 1 │ test["only"]()
   ·      ──────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:3:16]
 2 │             import { it } from 'vitest';
 3 │             it.only("test", () => {});
   ·                ────
 4 │             
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:10]
 1 │ describe.only("test", () => {});
   ·          ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:6]
 1 │ test.only("test", () => {});
   ·      ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:4]
 1 │ it.only.each([])("test", () => {});
   ·    ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:6]
 1 │ test.only.each``("test", () => {});
   ·      ────
   ╰────
  help: Remove focus from test.

  ⚠ vitest(no-focused-tests): Unexpected focused test.
   ╭─[no_focused_tests.tsx:1:4]
 1 │ it.only.each``("test", () => {});
   ·    ────
   ╰────
  help: Remove focus from test.
